--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+
 body {
   background: url(bg.jpg);
   font-family: 'Oswald', sans-serif;
@@ -94,7 +104,8 @@ body {
   left: 200px;
 }
 
-.inner_main_menu ul li:hover a {
+.inner_main_menu ul li:hover a,
+i {
   color: #6FDA44
 }
 
@@ -103,7 +114,12 @@ i {
   color: #ffffff
 }
 
-.inner_main_menu ul li ul li a:hover {
+/* .inner_main_menu ul li:hover ul li a>i {
+  color: black;
+} */
+
+.inner_main_menu ul li ul li a,
+i:hover {
   color: #262626
 }
 
@@ -178,7 +194,7 @@ ul.slicknav_nav {
 
   .logo_area {
     height: auto;
-    left: 0;
+    left: -57px;
     margin-left: 0;
     position: relative;
     top: 0;
@@ -187,7 +203,7 @@ ul.slicknav_nav {
 
   .logo_area img {
     height: auto;
-    width: 100%;
+    width: 100px;
   }
 }
 
@@ -204,6 +220,7 @@ ul.slicknav_nav {
 }
 
 .slicknav_btn {
+  top: 22px;
   position: relative;
   display: block;
   vertical-align: middle;
@@ -375,23 +392,11 @@ ul.slicknav_nav {
   height: 44px
 }
 
-
-.sec-1 {
-  background: url(../imgs/magnificent-woman-long-bright-skirt-dancing-studio-carefree-inspired-female-model-posing-with-pleasure-yellow.jpg) no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  width: 100%;
+.z-index {
+  left: 12%;
+  z-index: 999;
 }
 
-.sec-2 {
-  background: url(../imgs/happy-lady-stylish-skirt-boater-posing-pink-wall.jpg) no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  width: 100%;
-}
-.sec-3 {
-  background: url(../imgs/young-woman-beautiful-red-dress.jpg) no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  width: 100%;
-}
+/* .sec-1{
+  margin: 60px 0 !important;
+} */
