--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -21,6 +21,10 @@
       height: auto;
       width: 100px;
     }
+    .sale-items{
+      /* margin: 0 auto; */
+      width: 164px;
+    }
   }
   
   
