--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,11 +512,12 @@ a.sale-item:hover {
 
 .sec-3-carding {
   background-color: #fff;
-  padding: 1em 1.5em;
+  /* padding: 1em 1.5em; */
   box-shadow: 0 0 2px #00000012, 0 2px 2px #0000000f, 0 1px 3px #0000001a;
   /* height: 160px; */
   border-radius: 8px;
   cursor: pointer;
+  /* margin: 0 10px; */
 }
 
 .card-horizontal {
@@ -528,7 +529,7 @@ a.sale-item:hover {
   margin: 0 auto;
   /* width: 80px;
   height: 80px; */
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0px;;
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -543,12 +544,16 @@ a.sale-item:hover {
   height: 16px;
 }
 
-h4.card-title {
+.card-body .card-title {
   font-weight: 700;
   font-family: sans-serif;
   margin: 8px 0 0 0;
   font-size: 14px;
   color: #000;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
 }
 
 span.card-subtitle {
@@ -560,6 +565,7 @@ span.card-subtitle {
 
 .card-footer {
   margin: 10px 0;
+  align-items: center;
 }
 
 .left-item h4 {
@@ -574,8 +580,9 @@ span.round-figure {
 }
 
 .personal-btn {
-  width: 96px;
-  height: 32px;
+  font-size: 12px;
+  width: 65px;
+  height: 28px;
   padding: 0;
 }
 
@@ -585,11 +592,12 @@ span.round-figure {
 }
 
 .btn-green {
+  border: #00754a;
   color: #fff;
   background-color: #00754a;
 }
 
 .slide {
   /* width: 409.333px !important; */
-  margin-right: 26px;
+  /* margin-right: 26px; */
 }
